<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.lvqingyang.imagestyletransfer.User.UserInfoActivity">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_spacing"
        android:background="?colorPrimary">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_img"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:src="@drawable/communtiy_person"
            app:civ_border_color="@color/divColor"
            app:civ_border_width="2dp"
            />
        <com.andexert.library.RippleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            rv_centered="true">
        <Button
            android:id="@+id/post_head_btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btn_bg_corner"
            android:text="@string/post_head"/>
        </com.andexert.library.RippleView>
    </RelativeLayout>

    <com.lvqingyang.imagestyletransfer.view.InfoItem
        android:layout_marginTop="@dimen/small_spacing"
        android:id="@+id/account_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:showContent="true"
        custom:name="@string/account"
        custom:showArrow="false"/>
    <com.lvqingyang.imagestyletransfer.view.InfoItem
        android:id="@+id/pwd_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:showContent="true"
        custom:showHint="true"
        custom:name="@string/password"
        custom:content="********"
        custom:hint="@string/reset"/>
    <com.lvqingyang.imagestyletransfer.view.InfoItem
        android:id="@+id/nick_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:showContent="true"
        custom:showHint="true"
        custom:name="@string/nick"
        custom:hint="@string/reset"/>

    <com.andexert.library.RippleView
        android:layout_marginTop="@dimen/big_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        rv_centered="true">
        <Button
            android:id="@+id/logout_btn"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/logout"/>
    </com.andexert.library.RippleView>
</LinearLayout>
