<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lvqingyang.imagestyletransfer.Setting.FeedbackActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_spacing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feedback_info"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sub_medium_text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divColor"
            android:layout_marginTop="@dimen/small_spacing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:text="@string/feedback_type"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sub_medium_text"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/type_rv"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_spacing"
            android:text="@string/feedback_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sub_medium_text"/>
        <EditText
            android:textSize="@dimen/medium_text"
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:background="@drawable/et_bg"
            android:layout_marginTop="@dimen/small_spacing"
            android:minLines="6"
            android:maxLines="6"
            tools:ignore="LabelFor"/>


        <com.andexert.library.RippleView
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            rv_centered="true">
            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_"
                android:text="@string/submit"/>
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>
