<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/big_spacing"
                android:text="@string/reset_pwd"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sub_big_text"
                android:textStyle="bold" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:paddingStart="@dimen/medium_spacing"
                    android:paddingEnd="@dimen/medium_spacing"
                    android:paddingTop="@dimen/medium_spacing">
                    <EditText
                        android:id="@+id/current_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/current_pwd"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:paddingStart="@dimen/medium_spacing"
                android:paddingEnd="@dimen/medium_spacing"
                android:paddingBottom="@dimen/medium_spacing">
                <EditText
                    android:id="@+id/new_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_pwd"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
</LinearLayout>