<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lvqingyang.imagestyletransfer.Community.PostActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <com.andexert.library.RippleView
        android:id="@+id/ripple_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        rv_centered="true">
        <Button
            android:id="@+id/post_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_"
            android:text="@string/post"/>
    </com.andexert.library.RippleView>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ripple_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sub_medium_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/head_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/communtiy_person"
                        />
                    <TextView
                        android:id="@+id/username_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/small_spacing"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/medium_text"
                        tools:text="biloba"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_spacing">
                    <EditText
                        android:id="@+id/title_et"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/subTextColor"
                        android:hint="@string/edit_title"/>
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/subTextColor"
                    android:textSize="@dimen/sub_medium_text"
                    android:text="@string/no_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="@dimen/medium_spacing"
                    android:textSize="@dimen/medium_text"
                    android:text="@string/pic_type"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/type_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_spacing"
                    android:layout_marginBottom="@dimen/medium_spacing">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
