<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lvqingyang.imagestyletransfer.MainActivity">


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="284dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="@dimen/very_huge_text"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteY="454dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/photo_iv"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/photo"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/camera_iv"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/photo_iv"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/camera"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        tools:targetApi="lollipop"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/communtiy_iv"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toRightOf="@+id/photo_iv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/community"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        tools:targetApi="lollipop"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/photo_iv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/communtiy_iv"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/communtiy_iv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/communtiy_iv"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/camera_iv"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/camera_iv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/camera_iv"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/setting_iv"
        android:background="@drawable/ripple"
        android:clickable="true"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/setting" />

    <ImageView
        android:id="@+id/user_iv"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/feed_mark" />

</android.support.constraint.ConstraintLayout>
